--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,10 @@
 
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-console": "error",
+    "@typescript-eslint/no-undef": "error",
+    "@typescript-eslint/no-unused-expression": "error",
+    "@typescript-eslint/no-unreachable": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
 
