--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
 
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "no-console": "error",
+    // "no-console": "error",
     // "no-undef": "error",
     // "no-unused-expression": "error",
     "no-unreachable": "error",
