--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Shamim Islam",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
